[build-system]
requires = ["setuptools>=61.0", "cmake", "pybind11", "nanobind", "wheel", "pip", "ninja"]
build-backend = "setuptools.build_meta"

[project]
name = "ttmlir"
description = "Python Bindings and Package for TT-MLIR Compiler Project"
requires-python = ">=3.8"
keywords = ["mlir", "forge", "tt-forge", "tt-mlir", "tt-metal", "bindings", "machine learning", "tenstorrent"]
license = "Apache-2.0"
license-files = ["../LICENSE*"]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

# We will dynamically provide `version` and `dependencies` in setup.py
dynamic = ["version", "dependencies", "readme"]

[project.urls]
Homepage = "https://docs.tenstorrent.com/tt-mlir/"
Documentation = "https://docs.tenstorrent.com/tt-mlir/"
Repository = "https://github.com/tenstorrent/tt-mlir"
Issues = "https://github.com/tenstorrent/tt-mlir/issues"

[tool.cibuildwheel]
build = "cp311-manylinux_x86_64*"
skip = "*-musllinux_*"
build-verbosity = 2
