add_subdirectory(TosaToTTIR)
add_subdirectory(TTIRToTTIRDecomposition)
add_subdirectory(TTIRToTTIRGeneric)
add_subdirectory(TTNNToEmitC)
add_subdirectory(TTNNToEmitPy)
add_subdirectory(TTIRToLinalg)
add_subdirectory(TTIRToTTNN)
add_subdirectory(TTIRToTTMetal)
add_subdirectory(TTKernelToEmitC)
add_subdirectory(TTIRToTTKernel)
add_subdirectory(SFPIToEmitC)
add_subdirectory(TTNNToTTIR)

if (TTMLIR_ENABLE_STABLEHLO)
add_subdirectory(StableHLOToTTIR)
endif()
