add_subdirectory(TosaToTTIR)
add_subdirectory(TTIRToTTIRDecomposition)
add_subdirectory(D2MToTTNN)
add_subdirectory(TTIRToD2M)
add_subdirectory(ArithToD2MTileOps)
add_subdirectory(MathToD2MTileOps)
add_subdirectory(TTNNToEmitC)
add_subdirectory(TTNNToEmitPy)
add_subdirectory(TTIRToLinalg)
add_subdirectory(TTIRToTTNN)
add_subdirectory(TTKernelToEmitC)
add_subdirectory(D2MToTTKernel)
add_subdirectory(D2MToTTMetal)
add_subdirectory(SFPIToEmitC)
add_subdirectory(TTNNToTTIR)

if (TTMLIR_ENABLE_STABLEHLO)
add_subdirectory(StableHLOToTTIR)
endif()
